--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,6 +33,6 @@ jobs:
       with:
         name: coverage
         path: coverage.xml
-    - uses: jpetrucciani/black-check@master
-    - run: hostname
+#     - uses: jpetrucciani/black-check@master
+#     - run: hostname
     
