--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,20 +1,20 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-# name: Python package
+name: Python package
 
-# on:
-#   push:
-#     branches: [ master ]
-#   pull_request:
-#     branches: [ master ]
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
-# jobs:
-#   build:
+jobs:
+  build:
 
-#     runs-on: self-hosted
-#     steps:
-#     - uses: actions/checkout@v2
+    runs-on: self-hosted
+    steps:
+    - uses: actions/checkout@v2
 #     - name: Set up Python
 #       uses: actions/setup-python@v2
 #       with:
