--- a/.github/workflows/python_version.yml
+++ b/.github/workflows/python_version.yml
@@ -10,6 +10,7 @@ jobs:
   build:
     runs-on: self-hosted
     strategy:
+      matrix:
         # in this example, there is a newer version already installed, 3.7.7, so the older version will be downloaded
         python-version: [3.5, 3.6, 3.7.4, 3.8]
     steps:
