--- a/.github/workflows/python_version.yml
+++ b/.github/workflows/python_version.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
+      env:
+        AGENT_TOOLSDIRECTORY: /opt/hostedtoolcache     
       with:
         python-version: ${{ matrix.python-version }}
     - run: python --version
