--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -12,9 +12,10 @@ jobs:
     runs-on: self-hosted
     steps:
     - uses: actions/checkout@v2
-    - name: Install poetry
+    - name: Show system info
       run: |
         hostname
+        uname -a
         whoami
         date
         ls -asl
