--- a/.github/workflows/python_version.yml
+++ b/.github/workflows/python_version.yml
@@ -16,7 +16,8 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
       env:
-        AGENT_TOOLSDIRECTORY: /opt/hostedtoolcache     
+#         AGENT_TOOLSDIRECTORY: /opt/hostedtoolcache     
+        AGENT_TOOLSDIRECTORY:~
       with:
         python-version: ${{ matrix.python-version }}
     - run: python --version
