--- a/.github/workflows/python_version.yml
+++ b/.github/workflows/python_version.yml
@@ -17,7 +17,7 @@ jobs:
     - uses: actions/setup-python@v2
       env:
 #         AGENT_TOOLSDIRECTORY: /opt/hostedtoolcache     
-        AGENT_TOOLSDIRECTORY:~
+        AGENT_TOOLSDIRECTORY: /home/ubuntu
       with:
         python-version: ${{ matrix.python-version }}
     - run: python --version
