--- a/.github/workflows/python_version.yml
+++ b/.github/workflows/python_version.yml
@@ -16,8 +16,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
       env:
-#         AGENT_TOOLSDIRECTORY: /opt/hostedtoolcache     
-        AGENT_TOOLSDIRECTORY: /home/ubuntu
+        AGENT_TOOLSDIRECTORY: /opt/hostedtoolcache     
       with:
         python-version: ${{ matrix.python-version }}
     - run: python --version
