--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,5 +33,5 @@ jobs:
       with:
         name: coverage
         path: coverage.xml    
-    - uses: jpetrucciani/black-check@master
-    - run: hostname
+#     - uses: jpetrucciani/black-check@master
+#     - run: hostname
